<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PyCast</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_general_mode">GeneralMode</string>
    <string name="title_activity_connection_settings">ConnectionSettings</string>
    <string name="mouseButton">mouseButton</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="connectButton">Connect</string>
    <string name="ipAddress">IP address</string>
    <string name="portNumber">Port Number</string>
    <string name="mainMenu">PyCast Main Menu</string>
    <string name="leftClick">Left Click</string>
    <string name="rightClick">Right Click</string>
    <string name="sendTextButton">Send</string>
    <string name="upArrowButton">^</string>
    <string name="downArrowButton">v</string>
    <string name="leftArrowButton"><![CDATA[<]]></string>
    <string name="rightArrowButton"><![CDATA[>]]></string>
    <string name="enterButton">Enter</string>
    <string name="connectionButton">Connection Settings</string>
    <string name="generalButton">General Mode</string>
    <string name="presentationButton">Presentation Mode</string>
    <string name="aboutButton">About</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_presentation_mode">PresentationMode</string>

</resources>
